# minorun365-card

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
minorun365/: card.py
